--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
       content="Web site created using create-react-app"
     />
     
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Antic|Dancing+Script|Maven+Pro:700&amp;display=swap" rel="stylesheet">
-
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SPHA | Web Developer</title>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
